# serializer version: 1
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 104.0,
      'sum': 104.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 35.0,
      'sum': 139.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 104.0,
      'sum': 104.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 35.0,
      'sum': 139.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9139.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 62.0,
      'sum': 62.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 21.0,
      'sum': 83.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 62.0,
      'sum': 62.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 21.0,
      'sum': 83.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9083.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_energy_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 113.0,
      'sum': 113.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 38.0,
      'sum': 151.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_heating_energy_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 113.0,
      'sum': 113.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 38.0,
      'sum': 151.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9151.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 1.1,
      'sum': 1.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 1.0,
      'sum': 2.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 1.1,
      'sum': 1.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 1.0,
      'sum': 2.1,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9999.0,
      'sum': 10001.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 7.0,
      'sum': 7.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 7.0,
      'sum': 14.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 7.0,
      'sum': 7.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 7.0,
      'sum': 14.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9014.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_energy_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 61.1,
      'sum': 61.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 57.0,
      'sum': 118.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_hot_water_energy_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 61.1,
      'sum': 61.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 57.0,
      'sum': 118.1,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 90000.0,
      'sum': 90118.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_water_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 6.8,
      'sum': 6.8,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 5.0,
      'sum': 11.8,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_water_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 6.8,
      'sum': 6.8,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 5.0,
      'sum': 11.8,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9011.8,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_water_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 2.0,
      'sum': 2.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 3.0,
      'sum': 5.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:bahnhofsstr_1a_water_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 2.0,
      'sum': 2.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 3.0,
      'sum': 5.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9005.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 104.0,
      'sum': 104.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 35.0,
      'sum': 139.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 104.0,
      'sum': 104.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 35.0,
      'sum': 139.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9139.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 62.0,
      'sum': 62.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 21.0,
      'sum': 83.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 62.0,
      'sum': 62.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 21.0,
      'sum': 83.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9083.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_energy_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 113.0,
      'sum': 113.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 38.0,
      'sum': 151.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_heating_energy_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 113.0,
      'sum': 113.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 38.0,
      'sum': 151.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9151.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 1.1,
      'sum': 1.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 1.0,
      'sum': 2.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 1.1,
      'sum': 1.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 1.0,
      'sum': 2.1,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9999.0,
      'sum': 10001.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 7.0,
      'sum': 7.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 7.0,
      'sum': 14.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 7.0,
      'sum': 7.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 7.0,
      'sum': 14.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9014.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_energy_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 61.1,
      'sum': 61.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 57.0,
      'sum': 118.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_hot_water_energy_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 61.1,
      'sum': 61.1,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 57.0,
      'sum': 118.1,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 90000.0,
      'sum': 90118.1,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_water_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 6.8,
      'sum': 6.8,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 5.0,
      'sum': 11.8,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_water_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 6.8,
      'sum': 6.8,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 5.0,
      'sum': 11.8,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9011.8,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_water_cost_2months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 2.0,
      'sum': 2.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 3.0,
      'sum': 5.0,
    }),
  ])
# ---
# name: test_statistics_import[ista_ecotrend:luxemburger_str_1_water_cost_3months]
  list([
    dict({
      'end': 1714546800.0,
      'start': 1711954800.0,
      'state': 2.0,
      'sum': 2.0,
    }),
    dict({
      'end': 1717225200.0,
      'start': 1714546800.0,
      'state': 3.0,
      'sum': 5.0,
    }),
    dict({
      'end': 1719817200.0,
      'start': 1717225200.0,
      'state': 9000.0,
      'sum': 9005.0,
    }),
  ])
# ---
